Scroll + Pricing + FAQ

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                         </h1>
                     </div>
                 </div>
+                <div id="mouse">
+                    <div id="wheel"></div>
+                    <div class="scroll"></div>
+                    <div class="scroll2"></div>
+                    <div class="scroll3"></div>
+                </div>
             </div>
         </div>
     </div>
@@ -202,9 +208,9 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-3 col-md-6">
                 <div class="pricing_item">
-                    <h3 class="p_title">Silver Package</h3>
+                    <h3 class="p_title">Web Surfing</h3>
                     <h1 class="p_price">$15.00</h1>
                     <div class="p_list">
                         <ul>
@@ -218,10 +224,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="pricing_item active">
-                    <h3 class="p_title">Golden Package</h3>
-                    <h1 class="p_price">$25.00</h1>
+            <div class="col-lg-3 col-md-6">
+                <div class="pricing_item">
+                    <h3 class="p_title">Office tools</h3>
+                    <h1 class="p_price">$20.00</h1>
                     <div class="p_list">
                         <ul>
                             <li>24h pass</li>
@@ -234,10 +240,26 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 hidden-md">
+            <div class="col-lg-3 hidden-md">
                 <div class="pricing_item">
-                    <h3 class="p_title">Platinum Package</h3>
+                    <h3 class="p_title">Gaming</h3>
                     <h1 class="p_price">$35.00</h1>
+                    <div class="p_list">
+                        <ul>
+                            <li>24h pass</li>
+                            <li>PC characteristics</li>
+                            <li>PC characteristics</li>
+                        </ul>
+                    </div>
+                    <div class="p_btn">
+                        <a class="gradient_btn" href="#"><span>LEARN MORE</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 hidden-md">
+                <div class="pricing_item">
+                    <h3 class="p_title">Programming</h3>
+                    <h1 class="p_price">$25.00</h1>
                     <div class="p_list">
                         <ul>
                             <li>24h pass</li>
@@ -269,32 +291,42 @@
         <div class="row frequent_inner">
             <div class="col-lg-5 col-md-5">
                 <div class="frequent_item">
-                    <h3>Question 1</h3>
-                    <p>Answer 1</p>
+                    <h3>What platforms is offered for users?</h3>
+                    <p>We provide platforms based on open source software and mostly open source hardware,
+                        namely Linux distributions and RISC-V processors. There are several builds that serves
+                        different purposes: The W, O, G and P types, which are described below.</p>
                 </div>
             </div>
             <div class="offset-lg-2 col-lg-5 offset-md-2 col-md-5">
                 <div class="frequent_item">
-                    <h3>Question 2</h3>
-                    <p>Answer 2</p>
+                    <h3>What is RISC-V?</h3>
+                    <p>RISC-V is modern, designed from scratch instruction set architecture,
+                        which is simpler, faster and more flexible ISA than existing alternatives.
+                        It also features higher code density than wide-spread x86 architecture
+                        despite being RISC.</p>
                 </div>
             </div>
             <div class="col-lg-5 col-md-5">
                 <div class="frequent_item">
-                    <h3>Question 3</h3>
-                    <p>Answer 3</p>
+                    <h3>Does it really works?</h3>
+                    <p>It is new but production ready and supported by Linux kernel and most software.
+                        It's also good for computing.
+                    </p>
                 </div>
             </div>
             <div class="offset-lg-2 col-lg-5 offset-md-2 col-md-5">
                 <div class="frequent_item">
-                    <h3>Question 4</h3>
-                    <p>Answer 4</p>
+                    <h3>Am I able to purchase longer access to computers?</h3>
+                    <p>Yes. You might order month subscription, which is chipper,
+                        and use computer unlimited for a month.</p>
                 </div>
             </div>
             <div class="col-lg-5 col-md-5">
                 <div class="frequent_item last-child">
-                    <h3>Question 5</h3>
-                    <p>Answer 5</p>
+                    <h3>I have a problem with computer. What should I do?</h3>
+                    <p>You might ask café staff to help, they should try to solve your problem.
+                        Or else you might want to use Internet or manual to search for an answer of
+                        your problem.</p>
                 </div>
             </div>
             <div class="offset-lg-2 col-lg-5 offset-md-2 col-md-5">
