--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <div class="col-lg-6">
                 <div class="section_content">
                     <h6>About Us</h6>
-                    <h1>Information<br>About us</h1>
-                    <p>More information about us...</p>
+                	<h1>Very homelike, modern and hi-tech cyber-anticafee for hackers, games and other computer enthusiasts. </h1>
+                	<p>Visit as at San Jose, Almaden Expy street, 15</p>
                     <a class="primary_btn" href="#">Learn More</a>
                 </div>
             </div>
@@ -215,8 +215,8 @@
                     <div class="p_list">
                         <ul>
                             <li>24h pass</li>
-                            <li>PC characteristics</li>
-                            <li>PC characteristics</li>
+                            <li>2.5 GHz quad-core <br> RISC-V processor <br> Integrated video card </li>
+                            <li>8 Gb RAM 2400 MHz </li>
                         </ul>
                     </div>
                     <div class="p_btn">
@@ -231,8 +231,8 @@
                     <div class="p_list">
                         <ul>
                             <li>24h pass</li>
-                            <li>PC characteristics</li>
-                            <li>PC characteristics</li>
+                            <li>3.5 GHz quad-core <br> RISC-V processor <br> Integrated video card </li>
+                            <li>16 Gb RAM 2400 MHz</li>
                         </ul>
                     </div>
                     <div class="p_btn">
@@ -247,8 +247,8 @@
                     <div class="p_list">
                         <ul>
                             <li>24h pass</li>
-                            <li>PC characteristics</li>
-                            <li>PC characteristics</li>
+                            <li>4.2 GHz 8-core <br> x86_64 processor <br> Nvidia RTX 2080Ti</li> 
+                            <li>16 Gb RAM 3200 MHz</li>
                         </ul>
                     </div>
                     <div class="p_btn">
@@ -263,8 +263,8 @@
                     <div class="p_list">
                         <ul>
                             <li>24h pass</li>
-                            <li>PC characteristics</li>
-                            <li>PC characteristics</li>
+                            <li>3.0 Ghz 16-core <br> RISC-V processor <br> 2 × Nvidia Titan V in SLI</li>
+                            <li>32 Gb RAM 3200 MHz</li>
                         </ul>
                     </div>
                     <div class="p_btn">
@@ -331,8 +331,11 @@
             </div>
             <div class="offset-lg-2 col-lg-5 offset-md-2 col-md-5">
                 <div class="frequent_item last-child">
-                    <h3>Question 6</h3>
-                    <p>Answer 6</p>
+                    <h3>I have a problem with computer. What should I do?</h3>
+                    <p>You might ask café staff to help, they should try to solve your problem.
+						Or else you might want to use Internet or manual to search for an answer of
+						your problem.
+					</p>
                 </div>
             </div>
         </div>
